Actualiza encoder a base 64
Cambio por compatibilidad con nuevas versiones de Java.